--- a/EShop/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/EShop/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -104,7 +104,7 @@
                             <a class="btn btn-primary btn-lg btn-block" asp-action="Index" asp-controller="ProductAttributeValues">Product attribute values</a>
                         </li>
                         <li class="nav-item">
-                            <a class="btn btn-primary btn-lg btn-block" asp-action="List" asp-controller="Product">Additiona information</a>
+                            <a class="btn btn-primary btn-lg btn-block" asp-action="Index" asp-controller="AdditionalInformations">Additiona information</a>
                         </li>
 
                     </ul>
