--- a/EShop/Areas/Admin/Views/ProductAttributes/Index.cshtml
+++ b/EShop/Areas/Admin/Views/ProductAttributes/Index.cshtml
@@ -8,7 +8,7 @@
 <h2>Index</h2>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Create New ProductAttributes</a>
 </p>
 <table class="table">
     <thead>
