--- a/EShop/Areas/Admin/Views/Products/List.cshtml
+++ b/EShop/Areas/Admin/Views/Products/List.cshtml
@@ -37,12 +37,14 @@
                 </tr>
             }
 
-        </tbody>
+        </tbody>    
     </table>
 
 <div>
     @*@Html.ActionLink("Edit", "Edit", new { /* id = Model.PrimaryKey */ }) |*@
 
-    
+    <p>
+        <a asp-action="Create">Create New</a>
+    </p>
     <a asp-action="Index">Back to List</a>
 </div>
